fix: add styles for tag elements to ensure proper width and whitespace handling

--- a/include/style/widget.styl
+++ b/include/style/widget.styl
@@ -29,6 +29,14 @@
             background: $light-grey
             color: $white-invert
 
+        .tag
+            mjx-container
+                mjx-assistive-mml
+                    width: 100% !important
+        
+        .tag:has(mjx-container)
+            white-space: pre
+
 .level.is-multiline
     flex-wrap: wrap
 
